fix password visible

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,7 +21,11 @@
   width: 100%;
   z-index: 20;
 }
-
+/*@media (max-width: 920px) {
+  .header{
+    position: absolute;
+  }
+}*/
 
 .spinner{
   width: 200px;
