--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -220,13 +220,6 @@
       margin: 0 auto;
       padding: 10px;
       z-index: 11;
-      /*  .nav__item-title{
-          font-size: 20pt;
-        }
-        .nav__item-img{
-          width: 50px;
-          height: 50px;
-        }*/
     }
 
     &__item.active {
