--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,6 +3,9 @@
   height: 100%;
   background: #fff url('https://media.istockphoto.com/vectors/seamless-italian-pizza-pattern-on-black-background-vintage-pizza-vector-id1137028124?s=612x612') 0 0 repeat;
 }
+mat-icon{
+  margin-bottom: 20px;
+}
 
 .container {
   font-family: 'Roboto', sans-serif;
